=== 1.1.0 / 2011-??-??

== New Features
* JPA 2 support (Hibernate 3.6.1.Final)

== Improvements
* updated hibernate validator to 4.1.0.Final

=== 1.0.0 / 2011-02-04

== Improvements
* updated vraptor to 3.3.0
* updated jquery to 1.5
* decorators folder inside WEB-INF
* removed spring 3 option.

=== 0.0.4 / 2010-11-20

== Improvements
* changed decorators encoding to UTF-8
* updated jquery to 1.4.4
* updated joda-time to 1.6.2
* added jsp-api 2.1 dependency as provided scope.

== Bugfixes
* Fixed scaffolding with uppercase model and attributes(Issue 19).
* Fixed activesupport version cause version 3.0.3 break new instalations(Issue 22).
* Generate correct getter for boolean attributes(Issue 21).

=== 0.0.3 / 2010-11-04

== New Features
* works with gradle
* works with spring 3

== Improvements
* bumped ivy version to 2.2.0
* updated maven plugins
* validate users action when create app
* update hsqldb
* update junit
* better build.xml

=== 0.0.2 / 2010-10-08

== Improvements
* bumped vraptor version to 3.2.0

=== 0.0.1 / 2010-10-05

== New Features
* jsp support
* base package
* works with ant + ivy
* help command

== Improvements
* Better use of Generics.
* Update Hibernate

=== 0.0.1.rc / 2010-08-24

== New Features
* Added Hamcrest 1.1
* Added text support(textarea).

== Improvements
* Create forder to put images.

== Bugfixes
* Works on windows OS.

=== 0.0.1.beta4 / 2010-08-04

== New Features
* Added generic repository.
* Scaffold repository to each model.
* Now controllers use repository instead entity manager.
* Generated models come with hashCode and equals.
* Generating fake tests to models, controllers and repositories.

== Improvements
* Better freemarker views.
* UTF-8 default enconding.
* Update jetty maven plugin version(6 to 7).

=== 0.0.1.beta4 / 2010-07-16

== New Features
* Added validator support with hibernate-validator.
* Error Messages.
* Redirect to form when occur validation erros.
* Added joda time dependency.