@@ -4,6 +4,8 @@ output.dir=target
 test.build.dir=target/test-classes
 
 webapp.dir=<%= Configuration::WEB_APP %>
+js.dir=<%= Configuration::WEB_APP %>/javascripts
+css.dir=<%= Configuration::WEB_APP %>/stylesheets
 lib.dir=<%= Configuration::WEB_INF %>/lib
 build.dir=<%= Configuration::WEB_INF %>/classes
 
