@@ -4,6 +4,8 @@ output.dir=target
 test.build.dir=target/test-classes
 
 webapp.dir=src/main/webapp
+js.dir=src/main/webapp/javascripts
+css.dir=src/main/webapp/stylesheets
 lib.dir=src/main/webapp/WEB-INF/lib
 build.dir=src/main/webapp/WEB-INF/classes
 
