@@ -3,9 +3,10 @@
 
 	<configurations>
 		<conf name="default" description="dependencies used for compile" />
+		<conf name="provided" description="dependencies used for compile but is not packaged" visibility="public" />
 		<conf name="test" description="dependencies used for tests" visibility="public" />
 		<conf name="jetty" description="dependencies used for jetty" visibility="public" />
-		<conf name="provided" description="dependencies used for compile but is not packaged" visibility="public" />
+		<conf name="minify" description="dependencies used to minify js and css" visibility="public" />
 	</configurations>
 
 	<dependencies>
@@ -31,5 +32,8 @@
 		<dependency org="org.mortbay.jetty" name="jsp-api-2.1" rev="6.1.14" conf="jetty->default" />
 		<dependency org="org.mortbay.jetty" name="jsp-2.1" rev="6.1.14" conf="jetty->default" />
 		<dependency org="org.mortbay.jetty" name="jetty-ant" rev="6.1.14" conf="jetty->default" />
+		
+		<!-- Minify dependencies -->
+		<dependency org="com.yahoo.platform.yui" name="yuicompressor" rev="2.3.6" conf="minify->default" />
 	</dependencies>
 </ivy-module>
